# SWEGED

./: README.md
C++/: .gitignore
C++/refactoring_unittests/: refactoring_unittests.sln
C++/refactoring_unittests/RefactoringClasses/: Item.cpp  Item.h  Player.cpp  Player.h  RefactoringClasses.vcxproj  RefactoringClasses.vcxproj.filters
C++/refactoring_unittests/RefactoringPalindrome/: CMakeLists.txt  RefactoringPalindrome.vcxproj  RefactoringPalindrome.vcxproj.filters  func.cpp  func.h  main.cpp
C++/refactoring_unittests/UnitTest/: CMakeLists.txt  ExpensiveCalculation.cpp  ExpensiveCalculation.h  ExpensiveCalculationTest.cpp  MovementSpeed.cpp  MovementSpeed.h  MovementSpeedTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  main.cpp
